--- a/index.html
+++ b/index.html
@@ -95,8 +95,6 @@
         <div id="mainGameContent">
             <div id="verwaltung">
                 <button id="backToRosterButton">Team ändern</button>
-                <button id="exportButton">Export .txt</button>
-                <button id="exportCsvButton" style="background-color: #218838;">Export .csv</button>
                 <button id="exportPdfButton" style="background-color: #dc3545;">Export PDF</button>
                 <button id="showWurfbilderButton" style="background-color: #6f42c1;">Wurfbilder</button>
                 <button id="showHeatmapButton" style="background-color: #fd7e14;">Heatmap</button>
@@ -353,29 +351,25 @@
         <div class="modal-content" style="max-width: 450px;">
             <h3>Von wo wurde geworfen?</h3>
             <div id="wurfpositionFeld">
-                <svg viewBox="0 0 400 300" width="100%">
-                    <!-- Spielfeld Hälfte -->
-                    <rect x="0" y="0" width="400" height="300" fill="#f5f5f5" stroke="#333" stroke-width="2" />
+                <svg viewBox="0 0 300 400" width="100%">
+                    <!-- Spielfeld Hälfte (Matching Heatmap Output) -->
+                    <rect x="10" y="10" width="280" height="380" fill="#f5f5f5" stroke="#333" stroke-width="2" />
 
                     <!-- Tor oben (Mitte) -->
-                    <rect x="175" y="0" width="50" height="10" fill="#333" stroke="#333" stroke-width="2" />
+                    <rect x="112" y="10" width="76" height="8" fill="#333" />
 
                     <!-- 6m Linie (Torraum - durchgezogen) -->
-                    <path d="M 100 10 Q 100 120 200 120 Q 300 120 300 10" fill="none" stroke="#333" stroke-width="2" />
+                    <path d="M 75 18 Q 75 90 150 90 Q 225 90 225 18" fill="none" stroke="#333" stroke-width="2" />
 
                     <!-- 9m Linie (Freiwurflinie - gestrichelt) -->
-                    <path d="M 50 10 Q 50 180 200 180 Q 350 180 350 10" fill="none" stroke="#333" stroke-width="2"
-                        stroke-dasharray="8,4" />
-
-                    <!-- Mittellinie unten -->
-                    <line x1="0" y1="295" x2="400" y2="295" stroke="#333" stroke-width="2" />
+                    <path d="M 37 18 Q 37 150 150 150 Q 263 150 263 18" fill="none" stroke="#333" stroke-width="1"
+                        stroke-dasharray="6,3" />
 
                     <!-- 7m Punkt -->
-                    <circle cx="200" cy="80" r="3" fill="#333" />
+                    <circle cx="150" cy="65" r="4" fill="#333" />
 
-                    <!-- Seitenlinien -->
-                    <line x1="2" y1="0" x2="2" y2="300" stroke="#333" stroke-width="2" />
-                    <line x1="398" y1="0" x2="398" y2="300" stroke="#333" stroke-width="2" />
+                    <!-- Mittellinie -->
+                    <line x1="10" y1="388" x2="290" y2="388" stroke="#333" stroke-width="2" />
                 </svg>
             </div>
             <button class="modal-abbrechen" id="wurfpositionUeberspringen">Überspringen</button>
