--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
             <h3>Spieler auswählen:</h3>
             <div id="spielerAuswahlContainer">
                 <div class="spieler-spalte">
-                    <h4>Heim</h4>
+                    <h4 id="labelSpielerHeimRaster">Heim</h4>
                     <div id="heimSpielerRaster"></div>
                 </div>
                 <div class="spieler-spalte">
-                    <h4>Gegner</h4>
+                    <h4 id="labelSpielerGegnerRaster">Gegner</h4>
                     <div id="gegnerSpielerRaster"></div>
                 </div>
             </div>
@@ -168,7 +168,9 @@
             <p>Keine gespeicherten Spiele.</p>
         </div>
 
-        <div style="margin-top: 20px;">
+        <div style="margin-top: 20px; display: flex; gap: 10px; flex-wrap: wrap;">
+            <button id="importSpielButton" style="background-color: #6f42c1;">📥 Spiel importieren</button>
+            <input type="file" id="importSpielInput" class="versteckt" accept=".json">
             <button id="exportHistorieButton">Alle Spiele exportieren (Backup)</button>
         </div>
     </div>
@@ -299,6 +301,10 @@
                 <label for="toggleDarkMode">Dark Mode</label>
                 <input type="checkbox" id="toggleDarkMode">
             </div>
+            <div class="setting-row">
+                <label for="toggleAuswaertsspiel">Seiten tauschen</label>
+                <input type="checkbox" id="toggleAuswaertsspiel">
+            </div>
             <hr>
 
             <div class="setting-row">
@@ -426,8 +432,10 @@
                 <button class="heatmap-tab" data-tab="kombiniert">Kombiniert</button>
             </div>
             <div class="heatmap-filter">
-                <label><input type="radio" name="heatmapTeam" id="heatmapHeimFilter" value="heim" checked> Heim</label>
-                <label><input type="radio" name="heatmapTeam" id="heatmapGegnerFilter" value="gegner"> Gegner</label>
+                <label><input type="radio" name="heatmapTeam" id="heatmapHeimFilter" value="heim" checked> <span
+                        id="heatmapHeimLabel">Heim</span></label>
+                <label><input type="radio" name="heatmapTeam" id="heatmapGegnerFilter" value="gegner"> <span
+                        id="heatmapGegnerLabel">Gegner</span></label>
                 <span style="margin: 0 10px;">|</span>
                 <label><input type="checkbox" id="heatmapToreFilter" checked> Tore</label>
                 <label><input type="checkbox" id="heatmapMissedFilter" checked> Fehlwürfe</label>
@@ -436,6 +444,27 @@
                 <svg id="heatmapSvg" viewBox="0 0 300 200" width="600" height="400"></svg>
             </div>
             <button class="modal-abbrechen" id="closeHeatmapModal">Schließen</button>
+        </div>
+    </div>
+
+    <!-- Custom Confirm/Alert Modal -->
+    <div id="customConfirmModal" class="modal-overlay versteckt">
+        <div class="modal-content" style="max-width: 400px; text-align: center;">
+            <h3 id="customConfirmTitle">Bestätigung</h3>
+            <p id="customConfirmMessage" style="margin: 20px 0; font-size: 1rem;"></p>
+            <div style="display: flex; gap: 10px; justify-content: center;">
+                <button id="customConfirmYes" style="background-color: #28a745; flex: 1;">Ja</button>
+                <button id="customConfirmNo" class="modal-abbrechen" style="flex: 1;">Abbrechen</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Custom Alert Modal (nur OK Button) -->
+    <div id="customAlertModal" class="modal-overlay versteckt">
+        <div class="modal-content" style="max-width: 350px; text-align: center;">
+            <h3 id="customAlertTitle">Hinweis</h3>
+            <p id="customAlertMessage" style="margin: 20px 0; font-size: 1rem;"></p>
+            <button id="customAlertOk" style="background-color: #28a745; width: 100%;">OK</button>
         </div>
     </div>
 
