--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </div>
 
 
-    <!-- HISTORY VIEW -->
+    <!-- Vergangene Spiele -->
     <div id="historieBereich" class="versteckt">
         <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
             <h1>Vergangene Spiele</h1>
@@ -164,7 +164,6 @@
         </div>
 
         <div id="historieListe" class="history-list">
-            <!-- List items will be injected here -->
             <p>Keine gespeicherten Spiele.</p>
         </div>
 
@@ -175,7 +174,7 @@
         </div>
     </div>
 
-    <!-- HISTORY DETAIL VIEW -->
+    <!-- Vergangene Spiele Deitail -->
     <div id="historieDetailBereich" class="versteckt">
         <button id="backToHistoryList">Zurück zur Liste</button>
 
