--- a/index.html
+++ b/index.html
@@ -14,12 +14,30 @@
     <button id="settingsButton" title="Einstellungen">⚙️</button>
 
     <div id="rosterBereich">
-        <h1>Team-Erstellung</h1>
+        <h2>Team-Übersicht</h2>
+
+        <!-- Team Namen Eingabe -->
+        <div style="display: flex; gap: 10px; margin-bottom: 20px;">
+            <div style="flex: 1;">
+                <label for="rosterTeamNameHeim" style="display: block; margin-bottom: 5px; font-weight: bold;">Heim Team
+                    Name:</label>
+                <input type="text" id="rosterTeamNameHeim" placeholder="Heim Team"
+                    style="width: 100%; box-sizing: border-box;">
+            </div>
+            <div style="flex: 1;">
+                <label for="rosterTeamNameGegner" style="display: block; margin-bottom: 5px; font-weight: bold;">Gegner
+                    Team Name:</label>
+                <input type="text" id="rosterTeamNameGegner" placeholder="Gegner Team"
+                    style="width: 100%; box-sizing: border-box;">
+            </div>
+        </div>
+
+        <h3>Spieler hinzufügen</h3>
         <p>Füge deine Spieler hinzu. Das Team wird auf diesem Gerät gespeichert.</p>
 
         <form id="addPlayerForm">
             <input type="hidden" id="editPlayerIndex">
-            <input type="text" id="playerNameInput" placeholder="Name" required>
+            <input type="text" id="playerNameInput" placeholder="Name (optional)">
             <input type="number" id="playerNumberInput" placeholder="Nr." required>
             <button type="submit">Hinzufügen</button>
             <button type="button" id="cancelEditButton" class="versteckt">Abbrechen</button>
@@ -29,14 +47,31 @@
             <button id="exportTeamButton" class="team-manage-btn">Team exportieren (.json)</button>
             <button id="importTeamButton" class="team-manage-btn">Team importieren (.json)</button>
             <input type="file" id="importFileInput" class="versteckt" accept=".json">
+            <button id="saveTeamButton" class="team-manage-btn" style="background-color: #28a745;">💾 Team
+                speichern</button>
+            <button id="loadTeamButton" class="team-manage-btn" style="background-color: #17a2b8;">📂 Team
+                laden</button>
         </div>
 
-        <h3>Aktuelles Team</h3>
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
+            <h3 id="teamHeaderTitle" style="margin: 0;">Heim Team</h3>
+            <div style="display: flex; align-items: center; gap: 10px;">
+                <span style="font-size: 0.9rem; color: var(--text-main);">Heim</span>
+                <label class="team-toggle-switch">
+                    <input type="checkbox" id="teamToggle">
+                    <span class="team-toggle-slider"></span>
+                </label>
+                <span style="font-size: 0.9rem; color: var(--text-main);">Gegner</span>
+            </div>
+        </div>
         <ul id="rosterListe"></ul>
 
+        <div style="margin-top: 20px;">
+            <button id="deleteTeamButton" style="width: 100%; background-color: #dc3545;">Aktuelles Team
+                löschen</button>
+        </div>
+
         <button id="startGameButton" class="cta-button">Spiel starten</button>
-        <button id="historyButton" class="secondary-button"
-            style="margin-top: 10px; display:block; width:100%;">Vergangene Spiele</button>
     </div>
 
     <div id="spielBereich" class="versteckt">
@@ -336,6 +371,12 @@
                 <input type="checkbox" id="toggleWurfpositionGegner">
             </div>
 
+
+            <hr>
+            <button id="historyButton" style="width: 100%; margin-top: 10px; background-color: #6f42c1;">Vergangene
+                Spiele</button>
+            <button id="seasonOverviewButton"
+                style="width: 100%; margin-top: 10px; background-color: #6f42c1;">Saison-Übersicht</button>
             <button class="modal-abbrechen" id="settingsSchliessen" style="margin-top:20px;">Schließen</button>
         </div>
     </div>
@@ -386,18 +427,94 @@
             <h3 id="gegnerNummerTitel">Torschütze (Gegner)</h3>
             <div id="bekannteGegnerListe"></div>
             <div style="margin-top: 10px; border-top: 1px solid #ccc; padding-top: 10px;">
-                <input type="number" id="neueGegnerNummer" placeholder="Neue Nummer" style="width: 60px;">
+                <input type="number" id="neueGegnerNummer" placeholder="Neue Nummer"
+                    style="width: 100%; box-sizing: border-box; margin-bottom: 5px;">
+                <input type="text" id="neueGegnerName" placeholder="Name (optional)"
+                    style="width: 100%; box-sizing: border-box; margin-bottom: 5px;">
                 <button id="gegnerNummerSpeichern">Weiter</button>
             </div>
             <button class="modal-abbrechen" id="gegnerNummerUeberspringen">Unbekannt / Weiter</button>
         </div>
     </div>
 
+    <!-- Quick Add Home Player Modal (during game) -->
+    <div id="quickAddPlayerModal" class="modal-overlay versteckt">
+        <div class="modal-content">
+            <h3>Spieler hinzufügen</h3>
+            <p>Nummer und optional Name eingeben:</p>
+            <input type="number" id="quickPlayerNumber" placeholder="Nummer"
+                style="width: 100%; box-sizing: border-box; margin-bottom: 5px;">
+            <input type="text" id="quickPlayerName" placeholder="Name (optional)"
+                style="width: 100%; box-sizing: border-box; margin-bottom: 5px;">
+            <button id="quickAddPlayerSave">Hinzufügen</button>
+            <button class="modal-abbrechen" id="quickAddPlayerCancel">Abbrechen</button>
+        </div>
+    </div>
+
+    <!-- Save Team Name Modal -->
+    <div id="saveTeamNameModal" class="modal-overlay versteckt">
+        <div class="modal-content">
+            <h3>Team speichern</h3>
+            <p>Gib einen Namen für das Team ein:</p>
+            <input type="text" id="saveTeamNameInput" placeholder="Team Name"
+                style="width: 100%; box-sizing: border-box; margin: 10px 0;">
+            <button id="saveTeamNameConfirm">Speichern</button>
+            <button class="modal-abbrechen" id="saveTeamNameCancel">Abbrechen</button>
+        </div>
+    </div>
+
+    <!-- View/Edit Team Modal -->
+    <div id="viewTeamModal" class="modal-overlay versteckt">
+        <div class="modal-content" style="max-width: 600px;">
+            <h3 id="viewTeamTitle">Team anschauen</h3>
+            <div style="margin-bottom: 15px;">
+                <label style="display: block; margin-bottom: 5px; font-weight: bold;">Team Name:</label>
+                <input type="text" id="editTeamNameInput" placeholder="Team Name"
+                    style="width: 100%; box-sizing: border-box;">
+            </div>
+            <div id="viewTeamPlayersList" style="max-height: 300px; overflow-y: auto; margin: 15px 0;">
+                <!-- Players will be listed here -->
+            </div>
+            <div style="display: flex; gap: 10px; margin-top: 15px;">
+                <button id="saveTeamChanges" style="flex: 1; background-color: #28a745;">Änderungen speichern</button>
+                <button class="modal-abbrechen" id="viewTeamClose" style="flex: 1;">Schließen</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Season Overview Modal -->
+    <div id="seasonOverviewModal" class="modal-overlay versteckt">
+        <div class="modal-content" style="max-width: 900px; max-height: 90vh; overflow-y: auto;">
+            <h2>Saison-Übersicht</h2>
+            <div id="seasonSummary"
+                style="margin: 15px 0; padding: 10px; background-color: var(--bg-secondary); border-radius: 5px;">
+                <!-- Summary stats -->
+            </div>
+            <div id="seasonStatsContainer" style="margin-top: 20px;">
+                <!-- Player cards will be rendered here -->
+            </div>
+            <button class="modal-abbrechen" id="seasonOverviewClose" style="margin-top: 20px;">Schließen</button>
+        </div>
+    </div>
+
+    <!-- Load Team Modal -->
+    <div id="loadTeamModal" class="modal-overlay versteckt">
+        <div class="modal-content">
+            <h3>Gespeicherte Teams</h3>
+            <div id="savedTeamsList" style="max-height: 300px; overflow-y: auto; margin: 15px 0;">
+                <!-- Teams will be listed here -->
+            </div>
+            <button class="modal-abbrechen" id="loadTeamCancel">Abbrechen</button>
+        </div>
+    </div>
+
     <div id="addGegnerModal" class="modal-overlay versteckt">
         <div class="modal-content">
             <h3>Gegner hinzufügen</h3>
-            <p>Gib die Nummer des neuen Gegners ein:</p>
+            <p>Gib die Nummer und optional den Namen ein:</p>
             <input type="number" id="addGegnerNummerInput" placeholder="Nummer"
+                style="width: 100%; box-sizing: border-box; margin: 10px 0;">
+            <input type="text" id="addGegnerNameInput" placeholder="Name (optional)"
                 style="width: 100%; box-sizing: border-box; margin: 10px 0;">
             <button id="addGegnerSpeichern">Hinzufügen</button>
             <button class="modal-abbrechen" id="addGegnerAbbrechen">Abbrechen</button>
