--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
                             <th>Tor</th>
                             <th>Feldtore</th>
                             <th>7m</th>
+                            <th>Fehlwurf</th>
                             <th>Quote</th>
                             <th>Gut</th>
-                            <th>Fehl</th>
                             <th>TF</th>
                             <th>G</th>
                             <th>2'</th>
@@ -254,9 +254,9 @@
                             <th>Tor</th>
                             <th>Feldtore</th>
                             <th>7m</th>
+                            <th>Fehlwurf</th>
                             <th>Quote</th>
                             <th>Gut</th>
-                            <th>Fehl</th>
                             <th>TF</th>
                             <th>G</th>
                             <th>2'</th>
