Mobile Ansicht von Tabellen

--- a/index.html
+++ b/index.html
@@ -1110,7 +1110,7 @@
             <!-- Detail: Torfolge -->
             <div id="histContentTorfolge" class="versteckt">
                 <div
-                    style="max-width: 1200px; margin: 0 auto; padding: 20px; background: var(--bg-card); border-radius: 8px; border: 1px solid var(--border-color);">
+                    style="max-width: 1200px; min-height: 400px; margin: 0 auto; padding: 20px; background: var(--bg-card); border-radius: 8px; border: 1px solid var(--border-color);">
                     <canvas id="histTorfolgeChart"></canvas>
                 </div>
             </div>
